Organizing files and folders

--- a/notebooks/churn_eda_ml.ipynb
+++ b/notebooks/churn_eda_ml.ipynb
@@ -46,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_abandono_clientes = pd.read_csv('./Abandono_clientes.csv')\n",
-    "data_abandono_teste = pd.read_csv('./Abandono_teste.csv', delimiter=';')"
+    "data_abandono_clientes = pd.read_csv('../data/Abandono_clientes.csv')\n",
+    "data_abandono_teste = pd.read_csv('../data/Abandono_teste.csv', delimiter=';')"
    ]
   },
   {
@@ -2265,7 +2265,7 @@
    "outputs": [],
    "source": [
     "# Read the CSV file\n",
-    "data = pd.read_csv('./Abandono_clientes.csv')\n",
+    "data = pd.read_csv('../data/Abandono_clientes.csv')\n",
     "\n",
     "# Model params\n",
     "gb_params = {'ccp_alpha': 0.0,\n",
@@ -2341,7 +2341,7 @@
     "pipeline.fit(X, y)\n",
     "\n",
     "# Save the fitted pipeline/model using pickle\n",
-    "with open('fitted_pipeline.pkl', 'wb') as file:\n",
+    "with open('./output/prediction_pipeline.pkl', 'wb') as file:\n",
     "    pickle.dump(pipeline, file)\n",
     "\n",
     "pipeline.predict()\n",
@@ -2350,7 +2350,7 @@
     "output_data = pd.DataFrame({'rowNumber': data.index, 'predictedValues': predictions})\n",
     "\n",
     "# Save the predictions to a CSV file\n",
-    "output_data.to_csv('output.csv', index=False)\n",
+    "# output_data.to_csv('output.csv', index=False)\n",
     "\n",
     "# Make predictions\n",
     "predictions = pipeline.predict(X)"
