Predictions output fixing

--- a/notebooks/churn_eda_ml.ipynb
+++ b/notebooks/churn_eda_ml.ipynb
@@ -2342,18 +2342,7 @@
     "\n",
     "# Save the fitted pipeline/model using pickle\n",
     "with open('./output/prediction_pipeline.pkl', 'wb') as file:\n",
-    "    pickle.dump(pipeline, file)\n",
-    "\n",
-    "pipeline.predict()\n",
-    "\n",
-    "# Create a new DataFrame with the row numbers and predicted values\n",
-    "output_data = pd.DataFrame({'rowNumber': data.index, 'predictedValues': predictions})\n",
-    "\n",
-    "# Save the predictions to a CSV file\n",
-    "# output_data.to_csv('output.csv', index=False)\n",
-    "\n",
-    "# Make predictions\n",
-    "predictions = pipeline.predict(X)"
+    "    pickle.dump(pipeline, file)"
    ]
   }
  ],
